--- a/app/assets/stylesheets/member/application.sass
+++ b/app/assets/stylesheets/member/application.sass
@@ -27,7 +27,7 @@ input[type=checkbox], input[type=radio]
 .name-business
   @extend .navbar-brand
   :margin 80px 0 30px 0
-  :color #3C4144
+  :color #fff
 
 .animated 
   margin-top: 2.3rem
@@ -212,6 +212,8 @@ input[type=checkbox], input[type=radio]
       justify-content: space-evenly
       margin-top: 7px
 
+.sign-up 
+  color: #fff
 
 @media (max-width: 767px)
   .banners-dd3-content
