--- a/app/views/layouts/login.html.slim
+++ b/app/views/layouts/login.html.slim
@@ -8,8 +8,8 @@ html.html-devise lang="pt-BR"
 
     title= "Target 3.0"
 
-    = stylesheet_link_tag "admin/application", media: "all"
-    = javascript_include_tag "admin/application"
+    = stylesheet_link_tag "member/application", media: "all"
+    = javascript_include_tag "member/application"
 
     = csrf_meta_tags
     /[if lt IE 9]
