--- a/app/views/layouts/member.html.slim
+++ b/app/views/layouts/member.html.slim
@@ -1,51 +1,66 @@
 doctype html
-html.html-devise lang="pt-BR"
+html lang="pt-BR"
   head
     meta charset="utf-8"
-    meta name="keywords" content=""
+    meta name="robots" content="noindex"
     meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
-
-    title= "Target 3.0"
+    title = 'Cash Premium 1.0'
 
     = stylesheet_link_tag "member/application", media: "all"
     = javascript_include_tag "member/application"
+
+    script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-34824777-48" 
+    javascript:
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-34824777-48');
 
     = csrf_meta_tags
     /[if lt IE 9]
       = javascript_include_tag 'html5shiv-printshiv'
 
   body
-    section#content.wrapper-md.animated.fadeInUp
-      .container.aside-xl
-        .user-img.block = image_tag 'user_icon.png'
-        section.m-b-md
-          = yield
-          hr
-        .logo-image.text-center.m-b-md.block = image_tag 'logo_white.png'
-        .corp-info
-          .corp-email.col-md-12
-            span = icon('fas', 'envelope')
-            = mail_to 'contato@agenciaacerte.com', 'contato@agenciaacerte.com'
+    header
+      .container 
+        .logo-topo.col-md-12.col-xs-12
+          .col-md-3.col-sm-4.col-xs-12.logo
+            = link_to member_root_path do
+              = image_tag 'marca-area-restrita.png'
+          .col-md-8.col-sm-8.col-xs-12
+            .login-box
+              .d-flex
+                = icon('fas', 'user')
+                p = 'Olá, '
+                p #{current_member.name}  
+                = link_to 'Editar', member_edit_password_path, class: 'btn-area-restrita', :method => :get
+                = link_to 'Sair', destroy_member_session_path, class: 'btn-area-restrita', :method => :delete
 
-          .corp-phone.col-md-12
-            span = icon('fas', 'phone')  
-            = link_to '(79) 3217-2727', "tel:(79)3217-2727"
+    main
+    = yield
+  
+    footer
+      .container
+        /.col-md-3.col-sm-12.col-xs-12
+          .logo-empresa = image_tag 'marca-rodape-area.png', class: 'img-responsive'
+        /.col-md-6.col-sm-12.col-xs-12
+          .menu-footer
+            = link_to 'Início' ,member_root_path(), class: "menu-link"
+            = link_to 'Clientes', member_show_members_path(), class: "menu-link"            
+            = link_to 'Recados', member_messages_all_path(), class: "menu-link"
+        .col-md-3.col-sm-12.col-xs-12
+          .social
+            - if @social_network.present?
+              - @social_network.each do |midia|
+                = link_to midia.url, target: '_blank', class: 'menu-icon' do
+                  .midia-icon = icon('fab fa', "#{midia.slug}")
 
-          .corp-site.col-md-12
-            span = icon('fas', 'globe-americas')
-            = link_to'www.agenciaacerte.com', 'https://www.agenciaacerte.com', target: "_blank"
+        .col-md-12.col-xs-12
+          .segunda-faixa-footer
+            .d-flex
+              p = "Copyright © 2024 - Todos os direitos reservados."
+              /= image_tag 'acerte.png', class: 'img-responsive'
 
-          .corp-social.col-md-12
-            = link_to 'https://www.instagram.com/agenciaacerte', target: "_blank" do
-              span = icon('fab', 'instagram')
-
-            = link_to 'https://www.facebook.com/agenciaacerte', target: "_blank" do
-              span = icon('fab', 'facebook-square')
-
-            = link_to "https://api.whatsapp.com/send?phone=557932172727", target: "_blank" do
-              span = icon('fab', 'whatsapp')
-
-            = link_to 'https://goo.gl/maps/Xo5w368XwAyrWmEc8', target: "_blank" do
-              span = icon('fas', 'map-marker-alt')
+        
           
