--- a/app/assets/stylesheets/member/application.sass
+++ b/app/assets/stylesheets/member/application.sass
@@ -174,8 +174,11 @@ input[type=checkbox], input[type=radio]
       a
         color: #d3bdbf
         .small
-          font-size: medium
-         
+          font-size: medium 
+   
+  .list-group 
+    label 
+      color: #fff       
   .list-group-item
     margin: 15px 0
     border-radius: 10px
@@ -196,6 +199,8 @@ input[type=checkbox], input[type=radio]
       border-bottom-right-radius: 10px
       border-top-right-radius: 10px
 
+    
+
 
   .corp-info
     color: #ffffff
@@ -212,8 +217,19 @@ input[type=checkbox], input[type=radio]
       justify-content: space-evenly
       margin-top: 7px
 
-.sign-up 
+.sign-up
   color: #fff
+  label 
+    #fff
+  a
+    color: #fff
+  .form-input 
+    .password-confirmation-input 
+      display: inline-block
+      width: calc(50% - 10px)
+      margin-right: 20px 
+
+
 
 @media (max-width: 767px)
   .banners-dd3-content
