--- a/app/views/layouts/login.html.slim
+++ b/app/views/layouts/login.html.slim
@@ -6,7 +6,7 @@ html.html-devise lang="pt-BR"
     meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
 
-    title= "Target 3.0"
+    title= "Cash Premium 1.0"
 
     = stylesheet_link_tag "member/application", media: "all"
     = javascript_include_tag "member/application"
