--- a/app/assets/stylesheets/admin/application.sass
+++ b/app/assets/stylesheets/admin/application.sass
@@ -20,6 +20,10 @@ abbr[title]
 
 .scrollable
   :min-height 730px
+  #lottery_date_event
+    margin-left: 3rem 
+  #label_event 
+    margin-left: 1rem
 
 input[type=checkbox], input[type=radio]
   width: 14px
@@ -175,7 +179,7 @@ input[type=checkbox], input[type=radio]
         color: #d3bdbf
         .small
           font-size: medium
-         
+  
   .list-group-item
     margin: 15px 0
     border-radius: 10px
