--- a/app/views/admin/lotteries/index.html.slim
+++ b/app/views/admin/lotteries/index.html.slim
@@ -1,15 +1,19 @@
-h2 Telefones
+h2 Loterias
 .panel.panel-default
   .table-responsive
     table.table.table-striped.b-t.b-light
       thead
         tr
-          th.text-center Telefone
+          th.text-center Evento
+          th.text-center Data do Evento
+          th.text-center Tickets
           th.text-center(width=210) Ações
       tbody
         - collection.order(id: :desc).each do |r|
           tr
-            td.text-center= r.phone
+            td.text-center = r.event
+            td.text-center = r.date_event
+            td.text-center = r.ticket
             td.text-center.links-actions
               = render 'admin/shared/actions', r: r
 = render 'admin/shared/create'
