--- a/app/views/layouts/member.html.slim
+++ b/app/views/layouts/member.html.slim
@@ -27,7 +27,7 @@ html lang="pt-BR"
         .logo-topo.col-md-12.col-xs-12
           .col-md-3.col-sm-4.col-xs-12.logo
             = link_to member_root_path do
-              = image_tag 'logo-premium.png'
+              = image_tag 'logo.png'
           .col-md-8.col-sm-8.col-xs-12
             .login-box
               .d-flex
