--- a/app/views/member/home/index.html.slim
+++ b/app/views/member/home/index.html.slim
@@ -1,5 +1,11 @@
 section#agreement
   .container
-    p = "Seja bem vindo #{current_member.name}"
+    h1 Loterias Disponíveis
+    - @lotteries.each do |lottery|
+      div
+        h2 = lottery.event
+        p = lottery.date_event.strftime("%d/%m/%Y")
+        = link_to 'Participar', member_new_ticket_path(id: lottery.id)
 
+      
     
