--- a/app/views/admin/lotteries/index.html.slim
+++ b/app/views/admin/lotteries/index.html.slim
@@ -6,6 +6,7 @@ h2 Loterias
         tr
           th.text-center Evento
           th.text-center Data do Evento
+          th.text-center Status
           th.text-center Tickets
           th.text-center(width=210) Ações
       tbody
@@ -13,6 +14,13 @@ h2 Loterias
           tr
             td.text-center = r.event
             td.text-center = r.date_event
+            td.text-center
+              - if r.status?
+                = link_to admin_active_lottery_path(r), method: :put, class: "btn btn-success" do
+                  = icon('fas fa', 'check')
+              - else
+                = link_to admin_active_lottery_path(r), method: :put, class: "btn btn-danger" do
+                  = icon('fas fa', 'ban')
             td.text-center = r.ticket
             td.text-center.links-actions
               = render 'admin/shared/actions', r: r
