inserção de result no model Lottery

--- a/app/views/admin/lotteries/index.html.slim
+++ b/app/views/admin/lotteries/index.html.slim
@@ -23,5 +23,5 @@ h2 Loterias
                   = icon('fas fa', 'ban')
             td.text-center = r.ticket
             td.text-center.links-actions
-              = render 'admin/shared/actions', r: r
+              = render 'admin/shared/actions_lottery', r: r
 = render 'admin/shared/create'
