--- a/app/assets/stylesheets/admin/application.sass
+++ b/app/assets/stylesheets/admin/application.sass
@@ -216,6 +216,37 @@ input[type=checkbox], input[type=radio]
       justify-content: space-evenly
       margin-top: 7px
 
+.number-table
+  display: grid
+  grid-template-columns: repeat(10, 1fr) /* Define 10 colunas, ajuste conforme necessário */
+  gap: 10px
+  list-style-type: none
+  padding: 0
+  margin: 20px 0
+
+  .participant-number
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 40px
+    height: 40px
+    border-radius: 50% /* Bordas circulares */
+    background-color: #f2f2f2
+    font-size: 18px
+    font-weight: bold
+    color: #333
+    cursor: pointer
+    transition: background-color 0.3s ease
+
+  .participant-number:hover
+    background-color: #e0e0e0
+
+  #sorted-number
+    margin-top: 20px
+    font-size: 24px
+    font-weight: bold
+    color: #333
+
 
 @media (max-width: 767px)
   .banners-dd3-content
