--- a/app/views/admin/lotteries/index.html.slim
+++ b/app/views/admin/lotteries/index.html.slim
@@ -8,6 +8,7 @@ h2 Loterias
           th.text-center Data do Evento
           th.text-center Status
           th.text-center Tickets
+          th.text-center Resultado
           th.text-center(width=210) Ações
       tbody
         - collection.order(id: :desc).each do |r|
@@ -22,6 +23,9 @@ h2 Loterias
                 = link_to admin_active_lottery_path(r), method: :put, class: "btn btn-danger" do
                   = icon('fas fa', 'ban')
             td.text-center = r.ticket
+            td.text-center 
+              - if r.result.present? 
+                = r.result
             td.text-center.links-actions
               = render 'admin/shared/actions_lottery', r: r
 = render 'admin/shared/create'
