--- a/app/views/admin/lotteries/to_rank.html.slim
+++ b/app/views/admin/lotteries/to_rank.html.slim
@@ -1,10 +1,10 @@
 h1 Sorteio Dinâmico
 
 h2 Números Participantes:
-ul
+ul class="number-table"
   - @all_numbers.each do |number|
-    li = number
+    li class="participant-number" = number
 
 h2 Número Sorteado:
-p id="sorted-number"
+p id="sorted-number" data-sorted-number = @lottery.result
 
