--- a/app/assets/stylesheets/member/application.sass
+++ b/app/assets/stylesheets/member/application.sass
@@ -11,236 +11,103 @@
 @import toastr
 @import jquery.plupload.queue
 @import "http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css"
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
 
-\*:focus
-  :outline 0 !important
 
-abbr[title]
-  :border none !important
+*
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+    font-family: "Poppins", sans-serif
 
-.scrollable
-  :min-height 730px
 
-input[type=checkbox], input[type=radio]
-  width: 14px
 
-.name-business
-  @extend .navbar-brand
-  :margin 80px 0 30px 0
-  :color #fff
-
-.animated 
-  margin-top: 2.3rem
-  margin-left: 1rem
-  
-#uploader
-  :width 100%
-
-#gallery_images
-  :margin 20px 0
-  :width 100%
-
-  .gallery-image
-    :width 176px
-    :position relative
-    :margin 10px 4px 0
-
-  .remove-image
-    :top 3px
-    :right 8px
-    :position absolute
-    :font-size 18px
-    :background #fff
-    :color red
-    :padding 5px
-
-.plupload_filelist_footer
-  :height 42px
-  :margin-bottom 10px
-
-.plupload_header
-  :background #1aae88
-
-  .plupload_header_content
-    :background-image unset
-    :padding-left 10px
-
-.mt-25
-  :margin-top 25px
-
-.links-actions
-  a
-    :margin 0 5px
-
-.mr-10
-  :margin-right 10px
-
-.mr-20
-  :margin-right 20px
-
-.navbar-brand
-  :width 200px
-
-.logo-target
-  :width 100%
-
-.table > thead > tr > th,
-.table > thead > tr > td,
-.table > tbody > tr > th,
-.table > tbody > tr > td,
-.table > tfoot > tr > th,
-.table > tfoot > tr > td
-  :border 1px solid #EAEEF1
-
-.table
-  td
-    :vertical-align middle !important
-
-.panel
-  .table-striped
-    thead
-      th:last-child
-        :border-right solid 1px #eaeef1
-
-.gallery-img
-  .dd3-content
-    :height 156px
-
-.banners-dd3-content
-  .dd3-content
-    :height 280px
-
-.edit_banner
-  :margin-left 20px
-  .form-group
-    :float left
-    :width 100%
-
-.ml-15
-  :margin-left 15px
-
-.navbar-brand
-  img
-    :margin-top 13px
-
-.notice, .alert
-  display: none !important
-
-.bootstrap-filestyle
-  float: left
-  margin-top: 15px
-  width: 100%
-
-.remove-image-label
-  margin-left: 18%
-
-.remove-image-checkbox
-  margin-right: 5px !important
-
-.plan-change-status
-  :color #FFF 
-
-.help-block
-  color: #bf1e2a
-.html-devise
-  color: #f12123
-  background: #177bbb 
-
-  .btn-login
-    color: #464646 !important
-    background: #d1d1d1
-    border-radius: 10px
-
-  .user-img
-    img
-      width: 100%
-
-  .logo-image
-    img
-      max-width: 150px
-
-  .password-area
+#login
+    height: 100vh
     display: flex
     justify-content: space-between
-    margin-top: 20px
-    .text-left
-      font-size: medium
-      input[type=checkbox]
-        width: 20px
-        margin: 0px 0 0
-        &:checked
-          background-color: red
-    .text-right
-      a
-        color: #d3bdbf
-        .small
-          font-size: medium 
-   
-  .list-group 
-    label 
-      color: #fff       
-  .list-group-item
-    margin: 15px 0
-    border-radius: 10px
-    display: flex
     align-items: center
-    background: #337ab7
-    padding-bottom: 0px
-    padding-right: 0px
-    padding-top: 0px
-    &:first-child
-      border-radius: 10px
-    span
-      width: 35px
-      color: #ffffff
-      font-size: 20px
-    .list-width
-      height: 46px
-      border-bottom-right-radius: 10px
-      border-top-right-radius: 10px
+    .img-fundo-login
+        height: 100vh
 
+.login-container
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    h3
+        font-weight: bold
+        color: black
+        font-size: 30pt
+        margin-bottom: 0
+
+.input-container
+    display: flex
+    justify-content: center
+    align-content: center
+    flex-direction: column
+    gap: 1.5rem
+
+.login-input
+    border: none
+    width: 300px
+    border-radius: 8px
+    padding: 10px
+    padding-left: 30px
+
+.logo-cash
+    position: absolute
+    right: 100px
+
+.remember-password
+    margin-top: 10px
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 5px
+
+.text-i
+    position: absolute
+    margin: 10px
+
+.form-container
+    display: flex
+    justify-content: center
+    width: 100%
+
+.header-title
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
     
 
+.input-box
+    display: flex
+    justify-content: center
+    align-items: start
+    flex-direction: column
 
-  .corp-info
-    color: #ffffff
-    float: left
+.button-register
+    background: linear-gradient(45deg, #9C0000, #FF0000)
     width: 100%
-    font-size: 16px
+    color: white !important
     text-align: center
-    span
-      padding-right: 5px
-    a
-      color: #ffffff
-    .corp-social
-      display: flex
-      justify-content: space-evenly
-      margin-top: 7px
-
-.sign-up
-  color: #fff
-  label 
-    #fff
-  a
-    color: #fff
-  .form-input 
-    .password-confirmation-input 
-      display: inline-block
-      width: calc(50% - 10px)
-      margin-right: 20px 
+    border-radius: 15px
+    padding: 10px
+    box-shadow: 0 0 3px black
+    border: none
 
 
+.btn-default:hover
+    color: white !important
 
-@media (max-width: 767px)
-  .banners-dd3-content
-    .dd3-content
-      :height auto
+.button-container
+    display: flex
+    width: 100%
+    flex-direction: column
+    gap: 10px
+    font-size: 14px
 
-  .trash
-    :position relative
-    :margin-top -35px
-  
-  .edit_banner
-    :margin-left -10px
-    :margin-top 12px
-
+.button-register:hover
+    background: #9C0000 !important
