montagem da página de registro

--- a/app/assets/stylesheets/member/application.sass
+++ b/app/assets/stylesheets/member/application.sass
@@ -89,7 +89,7 @@
     flex-direction: column
 
 .button-register
-    background: linear-gradient(45deg, #9C0000, #FF0000)
+    background: linear-gradient(45deg, #0E6100, #24FF00)
     width: 100%
     color: white !important
     text-align: center
@@ -110,4 +110,4 @@
     font-size: 14px
 
 .button-register:hover
-    background: #9C0000 !important
+    background: #00571d !important
