--- a/app/assets/stylesheets/member/application.sass
+++ b/app/assets/stylesheets/member/application.sass
@@ -1,3 +1,4 @@
+//Importações
 @import bootstrap-sprockets
 @import bootstrap
 @import bootstrap-datetimepicker
@@ -14,100 +15,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
 
 
-*
-    margin: 0
-    padding: 0
-    box-sizing: border-box
-    font-family: "Poppins", sans-serif
-
-
-
-#login
-    height: 100vh
-    display: flex
-    justify-content: space-between
-    align-items: center
-    .img-fundo-login
-        height: 100vh
-
-.login-container
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-    h3
-        font-weight: bold
-        color: black
-        font-size: 30pt
-        margin-bottom: 0
-
-.input-container
-    display: flex
-    justify-content: center
-    align-content: center
-    flex-direction: column
-    gap: 1.5rem
-
-.login-input
-    border: none
-    width: 300px
-    border-radius: 8px
-    padding: 10px
-    padding-left: 30px
-
-.logo-cash
-    position: absolute
-    right: 100px
-
-.remember-password
-    margin-top: 10px
-    display: flex
-    justify-content: center
-    align-items: center
-    gap: 5px
-
-.text-i
-    position: absolute
-    margin: 10px
-
-.form-container
-    display: flex
-    justify-content: center
-    width: 100%
-
-.header-title
-    display: flex
-    justify-content: center
-    align-items: center
-    flex-direction: column
-    
-
-.input-box
-    display: flex
-    justify-content: center
-    align-items: start
-    flex-direction: column
-
-.button-register
-    background: linear-gradient(45deg, #0E6100, #24FF00)
-    width: 100%
-    color: white !important
-    text-align: center
-    border-radius: 15px
-    padding: 10px
-    box-shadow: 0 0 3px black
-    border: none
-
-
-.btn-default:hover
-    color: white !important
-
-.button-container
-    display: flex
-    width: 100%
-    flex-direction: column
-    gap: 10px
-    font-size: 14px
-
-.button-register:hover
-    background: #00571d !important
+//Login
+@import "./login.sass"
