--- a/app/assets/stylesheets/member/pages/login.sass
+++ b/app/assets/stylesheets/member/pages/login.sass
@@ -93,3 +93,7 @@
 
 .button-register:hover
     background: #00571d !important
+
+@media (max-width: 984px)
+    .img-fundo-login
+        display: none
