--- a/app/assets/stylesheets/member/pages/home.sass
+++ b/app/assets/stylesheets/member/pages/home.sass
@@ -34,22 +34,57 @@
 
 .dropdown
     color: white
+    width: 100%
 
 .itens-menu 
     display: flex
-    justify-content: center
     flex-direction: column
     padding: 10px
     a:hover
         color: #9e9e9e
 
-.dropdown-menu
-    min-width: 100px
+
+.actions-links 
+    width: 100%
+    display: flex
+    gap: 10px
+
+.active-user
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 10px
+    color: black
+
+.actions-user
+    display: flex
+    justify-content: center
+    align-items: center
+    gap: 10px
+    width: 100%
+    flex-direction: column
+    padding: 15px
+    a
+        background-color: #17A700
+        border-radius: 10px
+        padding: 5px
+        width: 100%
+        text-align: center
+        color: white
+    span
+        color: black
+
+
+
+.drop-cont 
+    display: flex
+    justify-content: center
 
 .button-dropdown
     display: flex
     align-items: center
     gap: 5px
+    color: white
     p
         margin: 0
 
@@ -86,18 +121,28 @@
     justify-content: start
     align-items: start
     flex-direction: column
+    width: 100%
 
 .nav-item-box
     display: flex
     color: black
-    padding: 5px 10px
+    padding: 10px
     align-items: center
     gap: 10px
     font-size: 11pt
     width: 100%
     cursor: pointer
+    
     a
         width: 100%
 
 .nav-item-box:hover
     background-color: #a8a8a8
+
+@media (max-width: 678px)
+    .nav-item-box
+        border-top: 1px solid #adadad
+    .nav-item-box:first-child
+        border-top: 0px solid #adadad
+    .nav-item-box:last-child
+        border-bottom: 1px solid #adadad
