--- a/app/views/layouts/member.html.slim
+++ b/app/views/layouts/member.html.slim
@@ -25,11 +25,15 @@ html lang="pt-BR"
 
   body
     .root 
-        header.header    
+        header.header  
             nav.navbar-home
                 .logo
                     = image_tag 'logo-cash-premios'
-                    h1 Cash Premios
+                    h1 Cash Prêmios
+                .button 
+                    .line1
+                    .line2 
+                    .line3 
                 .navbar-options    
                     .dropdown
                         .dropdown-toggle data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
@@ -43,31 +47,38 @@ html lang="pt-BR"
                                 = link_to 'Sair', destroy_member_session_path, class: 'btn-area-restrita', :method => :delete
         aside.aside
             .nav-container
-                .nav-item-box
+                a.nav-item-box href=""
                     =icon('fas', 'home')
-                    a href="" Inicio 
-                .nav-item-box
+                    span Inicio 
+                a.nav-item-box href=""
                     =icon('fas', 'newspaper')
-                    a href="" Campanhas 
-                .nav-item-box
+                    span Campanhas 
+                a.nav-item-box href=""
                     =icon('fas', 'list-alt')
-                    a href="" Comunicados 
-                .nav-item-box
+                    span Comunicados 
+                a.nav-item-box href=""
                     =icon('fas', 'wallet')
-                    a href="" Meus Titulos 
-                .nav-item-box
+                    span Meus Titulos 
+                a.nav-item-box href=""
                     =icon('fas', 'address-card')
-                    a href="" Cadastro 
-                .nav-item-box
+                    span Cadastro 
+                a.nav-item-box href=""
                     =icon('fas', 'trophy')
-                    a href="" Ganhadores 
-                .nav-item-box
+                    span Ganhadores 
+                a.nav-item-box href=""
                     =icon('fas', 'vote-yea')
-                    a href="" Termos de Uso 
-                .nav-item-box
+                    span Termos de Uso 
+                a.nav-item-box
                     =icon('fas', 'envelope')
-                    a href="" Entrar em Contato      
-
+                    span Entrar em Contato  
+                .actions-user  
+                    .actions-links 
+                        = link_to 'Editar', member_edit_password_path, :method => :get
+                        = link_to 'Sair', destroy_member_session_path, :method => :delete
+                    .active-user
+                        = icon('fas', 'user')
+                        span Olá, #{current_member.name}
+                    
         main.main
             = yield
     
