ateracao pagina home

--- a/app/assets/stylesheets/member/layout.sass
+++ b/app/assets/stylesheets/member/layout.sass
@@ -23,7 +23,7 @@
 
 .aside
     grid-area: aside
-    background-color: #CECECE
+    background-color: #059f01
     color: #fff
     height: 100%
     position: fixed
@@ -35,8 +35,8 @@
 
 .footer 
     grid-area: footer
-    background-color: #17A700
-    color: #fff
+    background-color: #c3c3c3
+    color: #000000
     height: 100px
     text-align: center
     display: flex
