--- a/app/assets/stylesheets/member/pages/home.sass
+++ b/app/assets/stylesheets/member/pages/home.sass
@@ -54,7 +54,9 @@
     justify-content: center
     align-items: center
     gap: 10px
-    color: black
+    color: white
+    span
+        color: white
 
 .actions-user
     display: flex
@@ -65,14 +67,13 @@
     flex-direction: column
     padding: 15px
     a
-        background-color: #17A700
+        background-color: #107100
         border-radius: 10px
-        padding: 5px
+        padding: 10px
         width: 100%
         text-align: center
         color: white
-    span
-        color: black
+
 
 
 
@@ -132,17 +133,19 @@
     font-size: 11pt
     width: 100%
     cursor: pointer
+    color: white
     
     a
         width: 100%
 
 .nav-item-box:hover
-    background-color: #a8a8a8
+    background-color: #00790a
+    color: white
 
 @media (max-width: 678px)
     .nav-item-box
-        border-top: 1px solid #adadad
+        border-top: 1px solid #008911
     .nav-item-box:first-child
-        border-top: 0px solid #adadad
+        border-top: 0px solid #008911
     .nav-item-box:last-child
-        border-bottom: 1px solid #adadad
+        border-bottom: 1px solid #008911
