--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -23,7 +23,7 @@ html lang="pt-BR"
           a.btn.btn-link.visible-xs data-target="#nav,html" data-toggle="class:nav-off-screen,open"
             = icon('far', 'bars')
           = link_to admin_root_path, class: 'navbar-brand' do
-            = image_tag 'logo-target.svg', class: 'logo-target'
+            = image_tag 'logo-cash-premios.png', class: 'logo-target'
             /span.hidden-nav-xs Agência Acerte
           a.btn.btn-link.visible-xs data-target=".user" data-toggle="dropdown"
             i.fa.fa-cog
