--- a/app/views/layouts/member.html.slim
+++ b/app/views/layouts/member.html.slim
@@ -47,7 +47,7 @@ html lang="pt-BR"
                                 = link_to 'Sair', destroy_member_session_path, class: 'btn-area-restrita', :method => :delete
         aside.aside
             .nav-container
-                a.nav-item-box href=""
+                a.nav-item-box href="/"
                     =icon('fas', 'home')
                     span Inicio 
                 a.nav-item-box href=""
@@ -78,7 +78,6 @@ html lang="pt-BR"
                     .active-user
                         = icon('fas', 'user')
                         span Olá, #{current_member.name}
-                    
         main.main
             = yield
     
@@ -88,8 +87,8 @@ html lang="pt-BR"
                 .col-md-12.col-xs-12
                 .segunda-faixa-footer
                     .d-flex
-                    p = "Copyright © 2024 - Todos os direitos reservados."
-                    /= image_tag 'acerte.png', class: 'img-responsive'
+                        /= image_tag 'logo-cash-premios.png', class: 'img-footer'
+                        p = "Copyright © 2024 - Todos os direitos reservados."
 
             
             
