--- a/app/assets/stylesheets/member/pages/home.sass
+++ b/app/assets/stylesheets/member/pages/home.sass
@@ -257,12 +257,12 @@
     gap: 10px
     margin-top: 30px 
     .new-sorteio-input
-        width: 100%
         border: none
         box-shadow: 0 0 5px
         border-radius: 10px
         padding: 5px
         outline: none
+        width: 200px
 .buttons-sorteio
     display: flex
     justify-content: center
@@ -298,13 +298,25 @@
 
 .button-add-numbers
     
+.sorteio-actions 
+    display: flex
+    gap: 10px
+    .action-buttons
+        border: none
+        background-color: #17a700
+        width: 30px
+        height: 30px
+        color: white
+        border-radius: 50%
+
+  
 
 .new-sorteio-column
     margin: 0
     padding: 8px
     display: flex
     justify-content: center
-    width: 300px
+    max-width: 300px
     height: 100px
     button
         width: 100%
