--- a/app/views/admin/shared/_actions_lottery.html.slim
+++ b/app/views/admin/shared/_actions_lottery.html.slim
@@ -1,4 +1,4 @@
-- if can? :to_rank, resource_class
+/- if can? :to_rank, resource_class
   = link_to admin_lottery_to_rank_path(lottery_id: r.id), class: "btn btn-info", title: 'Sortear', data: { toggle: 'tooltip'} do
     = icon('fas', 'arrow-right')    
 - if can? :destroy, resource_class
