--- a/app/views/member/home/pix.html.slim
+++ b/app/views/member/home/pix.html.slim
@@ -1,3 +1,4 @@
-- if @member.qr_code_url.present?
-  p Escaneie o QR code abaixo para realizar o pagamento:
-  img src="data:image/png;base64,#{@member.qr_code_url}" alt="QR code para pagamento Pix"
+img[src="data:image/jpeg;base64,#{@qr_code_base64}" width="200" height="200"]
+label for="copiar" Copiar Hash:
+input type="text" id="copiar" value=@qr_code readonly=true 
+
