remoção de informações confidenciais

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -55,7 +55,7 @@
                   = icon('far', 'envelope')
               span.clear
                 span.h3.block.m-t-xs.text-danger E-mail
-                small.text-muted contato@agenciaacerte.com
+                small.text-muted contato@cash.com
           .col-md-6.b-b
             .block.padder-v.hover href="#" 
               span.i-s.i-s-2x.pull-left.m-r-sm
@@ -64,7 +64,7 @@
               span.clear
                 span.h3.block.m-t-xs.text-danger Telefone
                 small.text-muted.text-u-c
-                  | (79) 3217-2727 
+                  | (79) 99661-3823 
           .col-md-6.b-b.b-r
             .block.padder-v.hover href="#" 
               span.i-s.i-s-2x.pull-left.m-r-sm
@@ -72,7 +72,7 @@
                   = icon('fas', 'map-marker-alt')
               span.clear
                 span.h3.block.m-t-xs.text-danger Endereço
-                small.text-muted Av.: Ministro Geraldo Barreto Sobral, Nº 2100 - JFC Trade Center Sala 1307 - Jardins
+                small.text-muted indefinido
           .col-md-6.b-r
             .block.padder-v.hover href="#" 
               span.i-s.i-s-2x.pull-left.m-r-sm
@@ -80,7 +80,7 @@
                   = icon('fas', 'home')
               span.clear
                 span.h3.block.m-t-xs.text-danger Site
-                = link_to 'agenciaacerte.com', 'https://www.agenciaacerte.com/', target: '_blank', class: 'small text-muted'
+                = link_to 'cash.com', 'https://www.cash.com/', target: '_blank', class: 'small text-muted'
                  
         
 javascript:
