--- a/app/views/layouts/devise.html.slim
+++ b/app/views/layouts/devise.html.slim
@@ -25,7 +25,7 @@ html.html-devise lang="pt-BR"
         /.corp-info
           .corp-email.col-md-12
             span = icon('fas', 'envelope')
-            = mail_to 'contato@agenciaacerte.com', 'contato@agenciaacerte.com'
+            = mail_to 'contato@cash.com', 'contato@cash.com'
 
 
           
