--- a/app/views/errors/_content.html.slim
+++ b/app/views/errors/_content.html.slim
@@ -1,9 +1,9 @@
 #box-links.pull-right
-  = link_to 'http://www.agenciaacerte.com', class: 'pull-right', target: '_blank' do
-    = image_tag 'agenciaacerte-big.png'
-  = link_to 'https://www.facebook.com/agenciaacerte?fref=ts', class: 'pull-right links', target: '_blank' do 
-    = image_tag 'agenciaacerte-facebook.png', class: 'pull-left'
-    .pull-right agenciaacerte
+  = link_to 'http://www.cash.com', class: 'pull-right', target: '_blank' do
+    = image_tag 'cash-big.png'
+  = link_to 'https://www.facebook.com/cash?fref=ts', class: 'pull-right links', target: '_blank' do 
+    = image_tag 'cash-facebook.png', class: 'pull-left'
+    .pull-right cash
   .pull-right.links
-    = image_tag 'agenciaacerte-phone.png', class: 'pull-left'
-    .pull-left (79) 3217-2727
+    = image_tag 'cash-phone.png', class: 'pull-left'
+    .pull-left (79) 99661-3823
