--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -5,7 +5,7 @@ html lang="pt-BR"
     meta name="robots" content="noindex"
     meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
-    title= content_for?(:title) ? yield(:title) : "CRM - Agência Acerte"
+    title= content_for?(:title) ? yield(:title) : "CRM - Cash Prêmio"
 
     = stylesheet_link_tag "admin/application", media: "all"
     = javascript_include_tag "admin/application"
@@ -24,7 +24,7 @@ html lang="pt-BR"
             = icon('far', 'bars')
           = link_to admin_root_path, class: 'navbar-brand' do
             = image_tag 'logo-cash-premios.png', class: 'logo-target'
-            /span.hidden-nav-xs Agência Acerte
+            /span.hidden-nav-xs Cash Prêmio
           a.btn.btn-link.visible-xs data-target=".user" data-toggle="dropdown"
             i.fa.fa-cog
         ul.nav.navbar-nav.navbar-right.m-n.hidden-xs.nav-user.user
@@ -50,7 +50,7 @@ html lang="pt-BR"
               section.w-f.scrollable
                 .slim-scroll data-disable-fade-out="true" data-distance="0" data-height="auto" data-railopacity="0.2" data-size="10px"
                   nav.nav-primary.hidden-xs
-                    .text-muted.text-sm.hidden-nav-xs.padder.m-t-sm.m-b-sm Agência Acerte
+                    .text-muted.text-sm.hidden-nav-xs.padder.m-t-sm.m-b-sm Cash Prêmio
                     ul.nav.nav-main data-ride="collapse"
                       = nav_link_to admin_root_path, {:class => 'menu_link'}, {:wrapper => 'li', :wrapper_class => 'item_menu', :selected_class => 'active'} do
                           = icon('fas', 'tachometer-alt')
